--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,7 +1,5 @@
-@(title: String)(content: Html)
-
+@(title: String)(navbar: Html)(content: Html)
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
         <title>@title</title>
@@ -10,7 +8,7 @@
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
     </head>
     <body>
-		<header>@header()</header>
+		<header>@navbar</header>
         <section class="content">@content</section>
     </body>
 </html>
