Switch DB from h2 to postgresql
データベースをh2からpostgresqlに変更した
postgresqlではuserが予約語になっていたため、taskテーブルのuser属性を
user_idに変更した

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -15,8 +15,8 @@
 	<ul class="task-list">
 		@tasks.map { task =>
 			<li>
-			@if(task.user != ""){
-				<div class="task">[@task.user]</div>
+			@if(task.user_id != ""){
+				<div class="task">[@task.user_id]</div>
 			}
 			<div class="task">@task.label</div>
 			<div class="task">
